@@ -25,6 +25,8 @@ New Features
 * LUCENE-6304: Added a new MatchNoDocsQuery that matches no documents.
   (Lee Hinman via Adrien Grand)
 
+* LUCENE-6341: Add a -fast option to CheckIndex. (Robert Muir)
+
 Bug Fixes
 
 * LUCENE-6249: StandardQueryParser doesn't support pure negative clauses. 
